[package]
name = "fdec"
version = "0.1.0"
authors = ["Andrew Lygin <alygin@gmail.com>"]
description = "A collection of macros for generating fixed-size fixed-point numeric types for Rust."
keywords = ["numbers", "numerics", "fixed-point", "decimal", "mathematics", "arithmetic"]
categories = ["data-structures", "algorithms", "mathematics"]
license = "MIT"
repository = "https://github.com/alygin/fdec"
homepage = "https://github.com/alygin/fdec"
readme = "https://github.com/alygin/fdec/blob/main/README.md"

[dependencies]
lazy_static = "1.4"
