[package]
name = "fdec"
version = "0.3.1"
authors = ["Andrew Lygin <alygin@gmail.com>"]
description = "A collection of macros for generating fixed-size fixed-point numeric types for Rust."
keywords = ["numbers", "numeric", "fixed-point", "decimal", "arithmetic"]
categories = ["data-structures", "algorithms", "mathematics"]
license = "MIT"
repository = "https://github.com/alygin/fdec"
homepage = "https://github.com/alygin/fdec"
readme = "README.md"

[profile.dev]
debug = 0

[dependencies]
lazy_static = "1.4"
